Finalizar asignación de licencia

--- a/UI/Views/AsignacionLicencia/Create.cshtml
+++ b/UI/Views/AsignacionLicencia/Create.cshtml
@@ -136,7 +136,7 @@
 
                     
 
-                    var Disponible = response.Disponible;
+                    var Disponible = response.Disponible + " de " + response.Cantidad;
                    
 
                     $("#dispo").val(Disponible);
