--- a/UI/Views/Licencia/Edit.cshtml
+++ b/UI/Views/Licencia/Edit.cshtml
@@ -26,6 +26,7 @@
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
+            @Html.HiddenFor(model => model.Cantidad)
 
 
             <div class=" col-auto">
@@ -56,7 +57,7 @@
             <div class="col-auto">
                 <div class="input-group col-md-10">
                     <span class="input-group-text"> @Traducciones["Cantidad"].Texto</span>
-                    @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "form-control",@disabled="disabled" } })
+                    @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
                     @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" })
                 </div>
             </div>
