--- a/UI/Views/AsignacionLicencia/Details.cshtml
+++ b/UI/Views/AsignacionLicencia/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model BE.AsignacionActivoBE
+﻿@model BE.AsignacionLicenciaBE
 
 @{
     Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
@@ -22,6 +22,13 @@
                 @Html.DisplayFor(model => model.Id)
             </dd>
             <dt>
+                @Traducciones["Licencia"].Texto
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Licencia.DescripcionLarga)
+            </dd>
+            <dt>
                 @Traducciones["Estado"].Texto
             </dt>
 
@@ -36,14 +43,15 @@
             <dd>
                 @Html.DisplayFor(model => model.Activo.Nombre)
             </dd>
-
             <dt>
-                @Traducciones["TipoDispositivo"].Texto
+                @Traducciones["Colaborador"].Texto
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.Activo.Tipo.Descripcion)
+                @Html.DisplayFor(model => model.Colaborador.NombreCompleto)
             </dd>
+
+
 
 
 
@@ -55,7 +63,7 @@
                 @Html.DisplayFor(model => model.FechaInicio)
             </dd>
 
-            @if (Model.FechaFinalizacion!=default(DateTime))
+            @if (Model.FechaFinalizacion != default(DateTime))
             {
 
                 <dt>
@@ -67,21 +75,9 @@
                 </dd>
             }
 
-            <dt>
-                @Traducciones["Colaborador"].Texto
-            </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Colaborador.NombreCompleto)
-            </dd>
 
-            <dt>
-                @Traducciones["Destino"].Texto
-            </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.Tipo.Descripcion)
-            </dd>
 
 
 
