--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -133,7 +133,7 @@
                                     </button>
                                     <div class="collapse" id="int-collapse">
                                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                            <li><a href="#" class="link-dark rounded">@Traducciones["AnalisisDeActivosOciosos"].Texto</a></li>
+                                            <li>@Html.ActionLink(Traducciones["AnalisisDeActivosOciosos"].Texto, "AnalisisActivosOciosos", "Inteligencia", null, new { @class = "link-dark rounded", @id = "ActOc" })</li>
                                             <li><a href="#" class="link-dark rounded">@Traducciones["AnalisisColaboradorVsRecursos"].Texto  </a></li>
                                             <li><a href="#" class="link-dark rounded">@Traducciones["OptimizacionDeAsignaciones"].Texto</a></li>
                                         </ul>
