Avance en analisis col vs disp

--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -134,8 +134,8 @@
                                     <div class="collapse" id="int-collapse">
                                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                                             <li>@Html.ActionLink(Traducciones["AnalisisDeActivosOciosos"].Texto, "AnalisisActivosOciosos", "Inteligencia", null, new { @class = "link-dark rounded", @id = "ActOc" })</li>
-                                            <li><a href="#" class="link-dark rounded">@Traducciones["AnalisisColaboradorVsRecursos"].Texto  </a></li>
-                                            <li><a href="#" class="link-dark rounded">@Traducciones["OptimizacionDeAsignaciones"].Texto</a></li>
+                                            <li>@Html.ActionLink(Traducciones["AnalisisColaboradorVsRecursos"].Texto, "AnalisisColaboradorActivos", "Inteligencia", null, new { @class = "link-dark rounded", @id = "ColAct" })</li>
+
                                         </ul>
                                     </div>
                                 </li>
