--- a/UI/Views/Home/Index.cshtml
+++ b/UI/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1"><strong>@Traducciones["Dispositivos"].Texto</strong></div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">536</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.CantidadDispositivos</div>
                             </div>
                             <div class="col-auto">
                                 <i class="fa fa-desktop fa-2x" style="color: #dddfeb"></i>
@@ -41,8 +41,8 @@
                     <div class="card-body">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1"><strong>@Traducciones["Licencias"].Texto</strong></div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">254</div>
+                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1"><strong>@Traducciones["ContratosDeLicencia"].Texto</strong></div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.CantidadContratosLicencia</div>
                             </div>
                             <div class="col-auto">
                                 <i class="fa fa-paperclip fa-2x" style="color: #dddfeb"></i>
@@ -59,7 +59,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-info text-uppercase mb-1"><strong>@Traducciones["Colaboradores"].Texto</strong></div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">114</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.CantidadColaboradores</div>
                             </div>
                             <div class="col-auto">
                                 <i class="fa fa-user-circle fa-2x" style="color: #dddfeb"></i>
@@ -76,7 +76,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-warning text-uppercase mb-1"><strong>@Traducciones["Departamentos"].Texto</strong></div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.CantidadDepartamentos</div>
                             </div>
                             <div class="col-auto">
                                 <i class="fa fa-users fa-2x " style="color: #dddfeb"></i>
@@ -100,21 +100,21 @@
                         <h6 class="m-0 font-weight-bold text-primary">@Traducciones["EstadoGeneral"].Texto</h6>
                     </div>
                     <div class="card-body">
-                        <h4 class="small font-weight-bold">@Traducciones["ActivosAsignados"].Texto <span class="float-right">80%</span></h4>
+                        <h4 class="small font-weight-bold">@Traducciones["ActivosAsignados"].Texto <span class="float-right">@ViewBag.PorcentajeActivosAsignados%</span></h4>
                         <div class="progress mb-4">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: @ViewBag.PorcentajeActivosAsignados%" aria-valuenow="@ViewBag.PorcentajeActivosAsignados" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <h4 class="small font-weight-bold">@Traducciones["LicenciasAsignadas"].Texto <span class="float-right">70%</span></h4>
+                        <h4 class="small font-weight-bold">@Traducciones["ActivosDisponibles"].Texto <span class="float-right">@ViewBag.PorcentajeActivosDisponibles%</span></h4>
                         <div class="progress mb-4">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-warning" role="progressbar" style="width: @ViewBag.PorcentajeActivosDisponibles%" aria-valuenow="@ViewBag.PorcentajeActivosDisponibles" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <h4 class="small font-weight-bold">@Traducciones["LicenciasVencidas"].Texto <span class="float-right">10%</span></h4>
+                        <h4 class="small font-weight-bold">@Traducciones["ActivosDeBaja"].Texto <span class="float-right">@ViewBag.PorcentajeActivosBaja%</span></h4>
                         <div class="progress mb-4">
-                            <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-info" role="progressbar" style="width: @ViewBag.PorcentajeActivosBaja%" aria-valuenow="@ViewBag.PorcentajeActivosBaja" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <h4 class="small font-weight-bold">@Traducciones["LicenciasVencidas"].Texto <span class="float-right">10%</span></h4>
+                        <h4 class="small font-weight-bold">@Traducciones["LicenciasAsignadas"].Texto <span class="float-right">@ViewBag.PorcentajeLicenciasAsignadas%</span></h4>
                         <div class="progress mb-4">
-                            <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-black" role="progressbar" style="width: @ViewBag.PorcentajeLicenciasAsignadas%" aria-valuenow="@ViewBag.PorcentajeLicenciasAsignadas" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
 
                     </div>
@@ -171,52 +171,38 @@
     </div>
     <!-- /.container-fluid -->
     <div class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-                <img src="..." class="rounded me-2" alt="...">
-                <strong class="me-auto">Bootstrap</strong>
-                <small class="text-muted">just now</small>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
-            <div class="toast-body">
-                See? Just like this.
-            </div>
-        </div>
-        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-                <img src="..." class="rounded me-2" alt="...">
-                <strong class="me-auto">Bootstrap</strong>
-                <small class="text-muted">just now</small>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
-            <div class="toast-body">
-                See? Just like this.See? Just like this.See? Just like this.See? Just like this.See? Just like this.See? Just like this.
-            </div>
-        </div>
-        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-                <img src="..." class="rounded me-2" alt="...">
-                <strong class="me-auto">Bootstrap</strong>
-                <small class="text-muted">just now</small>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
-            <div class="toast-body">
-                See? Just like this.
-            </div>
-        </div>
 
-        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-                <img src="..." class="rounded me-2" alt="...">
-                <strong class="me-auto">Bootstrap</strong>
-                <small class="text-muted">2 seconds ago</small>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        @if (ViewBag.AnalisisOciosos != null)
+        {
+            <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                    <img src="..." class="rounded me-2" alt="...">
+                    <strong class="me-auto">@Traducciones["AnalisisDeActivosOciosos"].Texto</strong>
+                    
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                   Existen Activos Ociosos, haga clic aquí para ver las recomendaciones
+                </div>
             </div>
-            <div class="toast-body">
-                Heads up, toasts will stack automatically
+        }
+        @if (ViewBag.AnalisisColaborador != null)
+        {
+            <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                    <img src="..." class="rounded me-2" alt="...">
+                    <strong class="me-auto">@Traducciones["AnalisisColaboradorVsRecursos"].Texto</strong>
+            
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                   Existen Colaboradores con su Perfil de Hardware incompleto, haga clic aquí para ver las recomendaciones.
+                </div>
             </div>
+
+        }
+
         </div>
-    </div>
 
 
 </main>
