--- a/UI/Views/Inteligencia/AnalisisActivosOciosos.cshtml
+++ b/UI/Views/Inteligencia/AnalisisActivosOciosos.cshtml
@@ -5,12 +5,12 @@
 
 @{
     Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
-    ViewBag.Title = Traducciones["Recomendaciones"].Texto;
+    ViewBag.Title = Traducciones["AnalisisDeActivosOciosos"].Texto;
 }
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">@Traducciones["Recomendaciones"].Texto</h1>
+        <h1 class="h2">@Traducciones["AnalisisDeActivosOciosos"].Texto</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
                 @using (Html.BeginForm())
@@ -22,14 +22,17 @@
                         </span>
                     </div>
                 }
-                <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "Recomendacion", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+                
                 <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
             </div>
 
         </div>
     </div>
     <div class="container-fluid">
-
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+            <strong>@Traducciones["LeyendaAnalisisActivosOciosos"].Texto</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
 
 
         <table class=" table table-hover">
@@ -41,6 +44,9 @@
                     </th>
                     <th>
                         @Traducciones["Recomendacion"].Texto
+                    </th>
+                    <th>
+                        @Traducciones["AccionesRapidas"].Texto
                     </th>
 
 
@@ -57,6 +63,9 @@
 
                     <td>
                         @Html.DisplayFor(modelItem => item.Propuesta)
+                    </td>
+                    <td>
+                        <a>@Html.ActionLink(@Traducciones["Asignar"].Texto, "Create", "AsignacionActivo", null, null)</a>
                     </td>
 
                 </tr>
