--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -39,7 +39,9 @@
 
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
 
-        @Html.ActionLink("A2Cloud", "Index", "Home", null, new { @class = "navbar-brand col-md-3 col-lg-2 me-0 px-3" })
+
+
+        <a href="/Home/Index"  style="font-weight:bold" class="navbar-brand col-md-3 col-lg-2 me-0 px-3">&ensp;A2Cloud &ensp;<i class="fa fa-cloud"></i></a>
 
         <button class="navbar-toggler  d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
