--- a/UI/Views/Departamento/Index.cshtml
+++ b/UI/Views/Departamento/Index.cshtml
@@ -16,14 +16,15 @@
                 @using (Html.BeginForm())
                 {
                     <div class="btn-group me-2">
-                        <span>
-                            @Traducciones["Buscar"].Texto @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "" })
-
-                        </span>
+                      
+                            @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "",@placeholder= @Traducciones["Buscar"].Texto })
+                            <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
+                            <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "Departamento", null, new { @class = "btn btn-sm btn-outline-primary", @type = "button" })</a>
+                        
                     </div>
                 }
-                <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "Departamento", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
-                <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
+
+
             </div>
 
         </div>
