--- a/UI/Views/Permisos/GrupoPermisos.cshtml
+++ b/UI/Views/Permisos/GrupoPermisos.cshtml
@@ -14,17 +14,18 @@
         <div class="btn-toolbar mb-2 mb-md-0">
             @using (Html.BeginForm())
             {
-                <div class="btn-group me-2">
-                    <span>
-                        @Traducciones["Buscar"].Texto @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "" })
-
-                    </span>
-                </div>
-            }
             <div class="btn-group me-2">
-                <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "CrearGrupo", "Permisos", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+
+                @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "",@placeholder= @Traducciones["Buscar"].Texto })
+
+
                 <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
+                <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "CrearGrupo", "Permisos", null, new { @class = "btn btn-sm btn-outline-primary", @type = "button" })</a>
             </div>
+            }
+
+
+    
 
         </div>
     </div>
