--- a/UI/Views/AsignacionLicencia/Index.cshtml
+++ b/UI/Views/AsignacionLicencia/Index.cshtml
@@ -15,22 +15,27 @@
             <div class="btn-group me-2">
                 @using (Html.BeginForm())
                 {
-                    <label>@Traducciones["Colaborador"].Texto:</label>
-                    @Html.DropDownList("Colaborador", new SelectList(ViewBag.Colaboradores, "Id", "NombreCompleto"), new { @class = "" })
+                    <div class="btn-group me-2">
+                   
+                        @Html.DropDownList("Colaborador", new SelectList(ViewBag.Colaboradores, "Id", "NombreCompleto"), new { @class = "" })
 
-                    <label>@Traducciones["Estado"].Texto:</label>
-                    @Html.DropDownList("Estado", new SelectList(ViewBag.Estados, "Id", "Descripcion"), new { @class = "" })
+                      
+                        @Html.DropDownList("Estado", new SelectList(ViewBag.Estados, "Id", "Descripcion"), new { @class = "" })
 
-                    <label>@Traducciones["Dispositivo"].Texto:</label>
-                    @Html.DropDownList("Dispositivo", new SelectList(ViewBag.Dispositivos, "Id", "Nombre"), new { @class = "" })
+                     
+                        @Html.DropDownList("Dispositivo", new SelectList(ViewBag.Dispositivos, "Id", "Nombre"), new { @class = "" })
 
-                    <input type="submit" value="@Traducciones["Filtrar"].Texto" class="btn btn-sm btn-outline-secondary" />
-                }
-                <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "AsignacionLicencia", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
-                <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
-            </div>
+                        <input type="submit" value="@Traducciones["Filtrar"].Texto" class="btn btn-sm btn-outline-secondary" />
 
-        </div>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
+                        <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "AsignacionLicencia", null, new { @class = "btn btn-sm btn-outline-primary", @type = "button" })</a>
+                        </div>
+                        }
+
+
+                    </div>
+
+                </div>
     </div>
     <div class="container-fluid">
 
