--- a/UI/Views/Db/Backup.cshtml
+++ b/UI/Views/Db/Backup.cshtml
@@ -15,17 +15,14 @@
 
             @using (Html.BeginForm())
             {
-                <div class="btn-group me-2">
-                    <span>
-                        @Traducciones["Buscar"].Texto @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "" })
-
-                    </span>
-                </div>
-            }
             <div class="btn-group me-2">
-                <a>@Html.ActionLink(Traducciones["Nuevo"].Texto, "Create", "Db", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+
+                @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "",@placeholder= @Traducciones["Buscar"].Texto })
                 <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
+                <a>@Html.ActionLink(Traducciones["Nuevo"].Texto, "Create", "Db", null, new { @class = "btn btn-sm btn-outline-primary", @type = "button" })</a>
+
             </div>
+            }
 
         </div>
     </div>
@@ -56,7 +53,7 @@
     </div>
         }
 
-        <table class="table table-hover">
+        <table class="table table-hover table-responsive">
             <thead>
                 <tr>
 
