--- a/UI/Views/Marca/Index.cshtml
+++ b/UI/Views/Marca/Index.cshtml
@@ -15,15 +15,17 @@
             <div class="btn-group me-2">
                 @using (Html.BeginForm())
                 {
-                    <div class="btn-group me-2">
-                        <span>
-                            @Traducciones["Buscar"].Texto @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "" })
+                <div class="btn-group me-2">
+                  
+                       @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "", @placeholder = @Traducciones["Buscar"].Texto })
 
-                        </span>
-                    </div>
+                 
+                    <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
+                    <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "Marca", null, new { @class = "btn btn-sm btn-outline-primary", @type = "button" })</a>
+                </div>
                 }
-                <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "Marca", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
-                <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
+
+
             </div>
 
         </div>
@@ -45,7 +47,7 @@
             </div>
         }
 
-        <table class=" table table-hover">
+        <table class=" table table-hover table-responsive">
             <thead>
                 <tr>
 
