--- a/UI/Views/Permisos/CrearGrupo.cshtml
+++ b/UI/Views/Permisos/CrearGrupo.cshtml
@@ -1,14 +1,18 @@
 ﻿@model BE.PerfilFamiliaBE
 
 @{
-    ViewBag.Title = "Crear Grupo de Permisos";
+    Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
+    ViewBag.Title = Traducciones["NuevoGrupo"].Texto;
 }
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Nuevo Grupo</h1>
+        <h1 class="h2">@Traducciones["NuevoGrupo"].Texto</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
+            <div class="btn-group me-2">
+                <a>@Html.ActionLink(@Traducciones["Volver"].Texto, "GrupoPermisos", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
 
+            </div>
         </div>
     </div>
 
@@ -22,10 +26,10 @@
 
 
             <div class="form-group " style="max-width: 400px;">
-                @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" }) 
+                @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
-                    
+
                     @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -39,10 +43,10 @@
     }
 
 </main>
-    <script>
+<script>
 
-        window.onload = function () {
-            document.getElementById('account-collapse').className = 'show';
-            document.getElementById('Grupos').className = 'btn-activo';
-        };
-    </script>
+    window.onload = function () {
+        document.getElementById('account-collapse').className = 'show';
+        document.getElementById('Grupos').className = 'btn-activo';
+    };
+</script>
