--- a/UI/Views/PerfilHardware/Index.cshtml
+++ b/UI/Views/PerfilHardware/Index.cshtml
@@ -88,6 +88,7 @@
             <td>
                 <a href="@Url.Action("Details", "PerfilHardware", new {id=item.Id })"><i class="fa fa-eye"></i></a>&ensp;&ensp;
                 <a href="@Url.Action("Edit", "PerfilHardware", new {id=item.Id })"><i class="fa fa-edit"></i></a>&ensp;&ensp;
+                <a href="@Url.Action("Copiar", "PerfilHardware", new {id=item.Id })"><i class="fa fa-copy"></i></a>&ensp;&ensp;
                 <a href="#" onclick="Confirmar('@item.Id','@item.Descripcion')"><i class="fa fa-trash"></i></a>
             </td>
         </tr>
