--- a/UI/Content/Site.css
+++ b/UI/Content/Site.css
@@ -27,10 +27,12 @@ body {
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 1500px) {
     .sidebar {
         top: 5rem;
     }
+
+    .ocultar-cel {display:none;}
 }
 
 .sidebar-sticky {
@@ -99,5 +101,7 @@ body {
         border-color: transparent;
         box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
     }
+
+    
 
 
