--- a/UI/Views/Activo/Index.cshtml
+++ b/UI/Views/Activo/Index.cshtml
@@ -21,20 +21,20 @@
                     {
 
                     <div class="btn-group me-2">
+                        <div class="ocultar-cel btn-group me-2">
+                            @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "", @placeholder = @Traducciones["Buscar"].Texto })
 
-                        @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "", @placeholder = @Traducciones["Buscar"].Texto })
+                            @Html.DropDownList("Estado", new SelectList(ViewBag.Estados, "Codigo", "Descripcion"), new { @class = "" })
+
+                            @Html.DropDownList("Tipo", new SelectList(ViewBag.Tipos, "Id", "Descripcion"), new { @class = "" })
 
 
-
-                        @Html.DropDownList("Estado", new SelectList(ViewBag.Estados, "Codigo", "Descripcion"), new { @class = "" })
-
-
-                        @Html.DropDownList("Tipo", new SelectList(ViewBag.Tipos, "Id", "Descripcion"), new { @class = "" })
-
-                        <input type="submit" value="@Traducciones["Filtrar"].Texto" class="btn btn-sm btn-outline-secondary" />
-
+                            <input type="submit" value="@Traducciones["Filtrar"].Texto" class="btn btn-sm btn-outline-secondary" />
+                        </div>
                         <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
                         <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "Activo", null, new { @class = "btn btn-sm btn-outline-primary", @type = "button" })</a>
+
+
                     </div>
 
                     }
@@ -61,8 +61,8 @@
         }
 
 
-
-        <table class="table table-hover table-responsive">
+    <div class="table-responsive">
+        <table class="table table-hover ">
             <thead>
                 <tr>
 
@@ -144,7 +144,7 @@
             }
 
         </table>
-
+    </div>
         <div class="pagination">
             @Html.PagedListPager(Model, pagina => Url.Action("Index", new { pagina, Valor_Filtro = ViewBag.ValorFiltro, Tipo = ViewBag.Tipo, Estado = ViewBag.Estado }),
             new PagedListRenderOptions
